--- a/.github/workflows/custom_build.yml
+++ b/.github/workflows/custom_build.yml
@@ -13,6 +13,7 @@ on:
           - esp32s3
           - esp32c3
           - esp32c6
+          - waveshare-esp32c6
       display_type:
         description: 'Display Configuration'
         required: true
